Split PoC into devtools and application subprojects

--- a/README.adoc
+++ b/README.adoc
@@ -13,6 +13,8 @@ The approach taken here basically consists of:
 - a filter (see `LiveReloadScriptFilter`) that appends the script to responses that produce `text/html` - note that this PoC target the Servlet stack (meaning Spring MVC), Spring WebFlux would need a separate filter (one that implements `org.springframework.web.server.WebFilter`)
 - auto-configuration (see `LiveReloadScriptFilterAutoConfiguration`) that sets up the filter if DevTools are enabled
 
+All of the above are handled by `poc-devtools`, which depends on `org.springframework.boot:spring-boot-devtools` and pulls it in transitively, while `poc-application` is a simple Spring Boot application that utilizes the `poc-devtools` and can be used to showcase improved LiveReload capabilities.
+
 Related issues:
 
 - https://github.com/spring-projects/spring-boot/issues/32111[spring-projects/spring-boot#32111]
